--- a/app/styles/sass/_config.sass
+++ b/app/styles/sass/_config.sass
@@ -35,6 +35,7 @@ $gutter: $grid-gutter-width
 @include font('Inter', normal, 300, '../fonts/Inter/Inter-Light.woff2')
 @include font('Inter', normal, 400, '../fonts/Inter/Inter-Regular.woff2')
 @include font('Inter', normal, 500, '../fonts/Inter/Inter-Medium.woff2')
+@include font('Inter', normal, 600, '../fonts/Inter/Inter-SemiBold.woff2')
 @include font('Inter', normal, 700, '../fonts/Inter/Inter-Bold.woff2')
 
 // GENERAL DOCUMENT STYLES
