--- a/app/styles/sass/blocks/_general.sass
+++ b/app/styles/sass/blocks/_general.sass
@@ -25,6 +25,9 @@ button
   font-family: inherit
   color: $white
 
+path
+  transition: .5s
+
 // - - - 
 
 .btn
@@ -33,7 +36,14 @@ button
   border-radius: 2.5rem
   padding: 1.8rem 3.4rem
   &:hover
-    border: .1rem solid $white
+    background: #1C1F22
+  &-icon
+    padding: 1rem 1.5rem
+    font-size: 1.4rem
+    border-radius: 1.5rem
+    display: flex
+    align-items: center
+    gap: 2rem
 
 // - - - 
 
@@ -72,174 +82,3 @@ button
     &:nth-child(2)
       width: 2.5rem
       margin: .6rem 0
-
-// - - - 
-
-.header
-  width: 14rem
-  padding: 3.5rem 0 6rem 0
-  display: flex
-  flex-direction: column
-  align-items: center
-  .user,
-  .menu
-    margin-top: auto
-  .brand
-    margin-bottom: 2.5rem
-  .cart,
-  .user
-    width: 5rem
-    height: 5rem
-    border-radius: 2rem
-    border: .1rem solid #25292C
-    display: flex
-    align-items: center
-    justify-content: center
-  .user
-    border: none
-    box-shadow: .2rem 1.2rem 2rem rgba($black, .1)
-    align-items: flex-end
-    overflow: hidden
-    &__img
-      width: 100%
-      height: 100%
-      object-fit: cover
-  .menu
-    font-size: 1.5rem
-    display: flex
-    flex-direction: column
-    align-items: center
-    a
-      color: $gray
-    &__item
-      &:not(:last-of-type)
-        margin-bottom: 2rem
-      &:last-child
-        margin-top: 3.5rem
-
-// - - - 
-
-.main
-  max-width: calc( 100vw - 14rem )
-  padding: 5rem 7.5rem 5.5rem 9rem
-  background: $mainbg
-  border-radius: 3rem 0 0 3rem
-  flex-grow: 1
-  display: flex
-  flex-direction: column
-
-  .search-form
-    display: flex
-    align-items: center
-    justify-content: flex-end
-    &__input
-      max-width: 16rem
-      font-size: 1.5rem
-    .slidinput-placeholder
-      color: $gray !important
-
-  .copyright
-    margin-top: auto
-    text-align: right
-    color: $gray
-    &__text
-      font-size: 1.4rem
-    .social-links
-      margin-bottom: 1.5rem
-      &__item
-        color: $gray
-        &:not(:last-of-type)
-          margin-right: 2rem
-        &:hover
-          color: $accent
-
-  &-body
-    height: 100%
-    flex-grow: 1
-
-  &-tabs
-    height: 100%
-    position: relative
-    .tab-btns
-      position: absolute
-      top: 33%
-      left: 0
-      li
-        &:not(:last-of-type)
-            margin-bottom: 2rem
-    #tab-1
-      .product
-        background: url('../images/dist/product-bg-1.png') center 20% no-repeat
-    #tab-2
-      .product
-        background: url('../images/dist/product-bg-2.png') center 20% no-repeat
-
-  &-content
-    height: 100%
-    display: flex
-
-    &__left
-      width: 25rem
-      padding-bottom: 12rem
-      align-self: flex-end
-      font-size: 1.2rem
-      color: $gray
-      .future-list
-        &__item
-          display: flex
-          align-items: center
-          gap: 2rem
-          text-transform: uppercase
-          &:not(:last-of-type)
-            margin-bottom: 2.5rem
-
-    &__center
-      flex-grow: 1
-      .product
-        max-width: 50rem
-        margin: 0 auto
-        padding-top: 17rem
-        text-align: center
-        &__img
-          margin-bottom: 1rem
-          filter: drop-shadow( 0 3rem 2rem rgba($black, .1) )
-        &__title
-          max-width: 42rem
-          margin: 0 auto 2rem auto
-          font-size: 7.2rem
-          font-weight: 200
-          line-height: 1.2
-        &__desc
-          max-width: 42rem
-          margin: 0 auto 2rem auto
-          color: $gray
-
-    &__right
-      width: 42rem
-      padding-bottom: 8.5rem
-      align-self: flex-end
-      .video-block
-        max-width: 35rem
-        margin-right: 7rem
-        display: flex
-        align-items: center
-        gap: 2rem
-        &__left
-          width: 15rem
-          height: 21rem
-          background: #E3EBF7
-          border-radius: 7rem
-          display: flex
-          align-items: center
-          justify-content: center
-          flex-shrink: 0
-        &__title
-          margin-bottom: 1rem
-          font-size: 2.4rem
-          font-weight: 500
-          line-height: 1.4
-        &__desc
-          color: $gray
-
-// - - - 
-
