--- a/app/styles/sass/blocks/_general.sass
+++ b/app/styles/sass/blocks/_general.sass
@@ -16,7 +16,8 @@ img
   display: block
 
 input,
-button
+button,
+textarea
   padding: .5rem
   display: inline-block
   background: none
@@ -44,6 +45,9 @@ path
     display: flex
     align-items: center
     gap: 2rem
+  &-small
+    padding: 1.5rem 6rem
+    border-radius: 1.5rem
 
 // - - - 
 
@@ -82,3 +86,17 @@ path
     &:nth-child(2)
       width: 2.5rem
       margin: .6rem 0
+
+// - - - 
+
+.content
+  width: 95%
+  height: 100%
+  display: flex
+  &__item
+    width: 25%
+    &:nth-child(1)
+      margin-right: 3%
+    &:nth-child(2)
+      width: 45%
+      margin-right: 8%
