--- a/app/styles/sass/blocks/sections.sass
+++ b/app/styles/sass/blocks/sections.sass
@@ -36,6 +36,8 @@
     align-items: center
     a
       color: $gray
+      &:hover
+        color: $white
     &__item
       &:not(:last-of-type)
         margin-bottom: 2rem
@@ -55,10 +57,8 @@
 
   &-top
     display: flex
-    align-items: flex-start
     &__left
       display: flex
-      align-items: flex-start
       gap: 5rem
     &__menu
       height: 8.5rem
@@ -72,118 +72,126 @@
       font-weight: 600
       font-size: 3.6rem
       line-height: 1
-    .search-form
-      margin-left: auto
-      display: flex
-      align-items: center
-      &__input
-        max-width: 16rem
-        font-size: 1.5rem
-      .slidinput-placeholder
-        color: $gray !important
-
-  .copyright
-    margin-top: auto
-    text-align: right
-    color: $gray
-    &__text
-      font-size: 1.4rem
-    .social-links
-      margin-bottom: 1.5rem
-      &__item
-        color: $gray
-        &:not(:last-of-type)
-          margin-right: 2rem
-        &:hover
-          color: $accent
-
-  &-body
-    height: 100%
-    flex-grow: 1
-
-  &-tabs
-    height: 100%
-    position: relative
-    .tab-btns
-      position: absolute
-      top: 33%
-      left: 0
-      li
-        &:not(:last-of-type)
-            margin-bottom: 2rem
-    #tab-1
-      .product
-        background: url('../images/dist/product-bg-1.png') center 20% no-repeat
-    #tab-2
-      .product
-        background: url('../images/dist/product-bg-2.png') center 20% no-repeat
 
   &-content
-    height: 100%
-    display: flex
-
+    align-items: flex-end
     &__left
-      width: 25rem
-      padding-bottom: 12rem
-      align-self: flex-end
-      font-size: 1.2rem
-      color: $gray
-      .future-list
-        &__item
-          display: flex
-          align-items: center
-          gap: 2rem
-          text-transform: uppercase
-          &:not(:last-of-type)
-            margin-bottom: 2.5rem
-
-    &__center
-      flex-grow: 1
-      .product
-        max-width: 50rem
-        margin: 0 auto
-        padding-top: 17rem
-        text-align: center
-        &__img
-          margin-bottom: 1rem
-          filter: drop-shadow( 0 3rem 2rem rgba($black, .1) )
-        &__title
-          max-width: 42rem
-          margin: 0 auto 2rem auto
-          font-size: 7.2rem
-          font-weight: 200
-          line-height: 1.2
-        &__desc
-          max-width: 42rem
-          margin: 0 auto 2rem auto
-          color: $gray
-
+      padding-bottom: 9rem
     &__right
-      width: 42rem
-      padding-bottom: 8.5rem
-      align-self: flex-end
-      .video-block
-        max-width: 35rem
-        margin-right: 7rem
-        display: flex
-        align-items: center
-        gap: 2rem
-        &__left
-          width: 15rem
-          height: 21rem
-          background: #E3EBF7
-          border-radius: 7rem
-          display: flex
-          align-items: center
-          justify-content: center
-          flex-shrink: 0
-        &__title
-          margin-bottom: 1rem
-          font-size: 2.4rem
-          font-weight: 500
-          line-height: 1.4
-        &__desc
-          color: $gray
+      padding-bottom: 6rem
+
+// - - - 
+
+.search-form
+  margin-left: auto
+  padding-bottom: 3rem
+  display: flex
+  align-items: center
+  &__input
+    max-width: 16rem
+    font-size: 1.5rem
+
+// - - - 
+
+.slidinput-placeholder
+  color: $gray !important
+
+// - - - 
+
+.copyright
+  margin-top: auto
+  padding-top: 3rem
+  text-align: right
+  color: $gray
+  &__text
+    font-size: 1.4rem
+  .social-links
+    margin-bottom: 1.5rem
+    &__item
+      color: $gray
+      &:not(:last-of-type)
+        margin-right: 2rem
+      &:hover
+        color: $accent
+
+// - - - 
+
+.tabs
+  height: 100%
+  position: relative
+  .tab-btns
+    position: absolute
+    top: 32%
+    left: 0
+    li
+      &:not(:last-of-type)
+          margin-bottom: 2rem
+  .tabs-content
+    height: 100%
+  #tab-1
+    .product
+      background: url('../images/dist/product-bg-1.png') center 20% no-repeat
+  #tab-2
+    .product
+      background: url('../images/dist/product-bg-2.png') center 20% no-repeat
+
+// - - - 
+
+.future-list
+  font-size: 1.2rem
+  color: $gray
+  &__item
+    display: flex
+    align-items: center
+    gap: 2rem
+    text-transform: uppercase
+    &:not(:last-of-type)
+      margin-bottom: 2.5rem
+
+// - - - 
+
+.product
+  max-width: 50rem
+  margin: 0 auto
+  text-align: center
+  &__img
+    margin-bottom: 1rem
+    filter: drop-shadow( 0 3rem 2rem rgba($black, .1) )
+  &__title
+    max-width: 42rem
+    margin: 2rem auto 0 auto
+    font-size: 7.2rem
+    font-weight: 200
+    line-height: 1.2
+  &__desc
+    max-width: 42rem
+    margin: 2rem auto 0 auto
+    color: $gray
+  &__btn
+    margin-top: 3rem
+
+// - - - 
+
+.video-block
+  display: flex
+  align-items: center
+  gap: 2rem
+  &__left
+    width: 15rem
+    height: 21rem
+    background: #E3EBF7
+    border-radius: 7rem
+    display: flex
+    align-items: center
+    justify-content: center
+    flex-shrink: 0
+  &__title
+    margin-bottom: 1rem
+    font-size: 2.4rem
+    font-weight: 500
+    line-height: 1.4
+  &__desc
+    color: $gray
 
 // - - - 
 
@@ -217,10 +225,12 @@
 
 // - - - 
 
-.product
+.products
   width: 100%
   margin-top: auto
   padding-top: 10rem
+  .swiper-slide
+    position: relative
   .img-slider
     &__img
       max-width: 37rem
@@ -265,27 +275,92 @@
         background: $accent
         .svg path
           fill: $white
-  .swiper-slide
-    position: relative
-  .sale
-    position: absolute
-    top: 0
-    right: -2.5rem
-    background: $accent
-    color: $white
-    padding: .7rem 1.5rem .7rem 2.5rem
-    border-radius: 1rem
-    transform: rotate(90deg)
-    &::after
-      content: ''
-      display: block
-      width: .7rem
-      height: .7rem
-      background: $mainbg
-      border-radius: 100%
-      position: absolute
-      top: 50%
-      left: 13%
-      transform: translateY(-50%)
 
 // - - - 
+
+.sale
+  position: absolute
+  top: 0
+  right: -2.5rem
+  background: $accent
+  color: $white
+  padding: .7rem 1.5rem .7rem 2.5rem
+  border-radius: 1rem
+  transform: rotate(90deg)
+  &::after
+    content: ''
+    display: block
+    width: .7rem
+    height: .7rem
+    background: $mainbg
+    border-radius: 100%
+    position: absolute
+    top: 50%
+    left: 13%
+    transform: translateY(-50%)
+
+// - - - 
+
+.about
+  &-content
+    background: url('../images/dist/about-bg-2.png') center center no-repeat
+    &__left
+      margin-top: 18rem
+      &_title
+        margin-bottom: 2rem
+        font-size: 2.4rem
+        font-weight: 500
+        line-height: 1.2
+      &_text
+        margin-bottom: 1rem
+        font-size: 1.5rem
+        color: $gray
+      &_btn
+        margin-top: 2.5rem
+    &__center
+      padding-bottom: 5rem
+      background: url('../images/dist/about-bg-1.png') center 40% no-repeat
+      display: flex
+      align-items: flex-end
+      justify-content: center
+      text-align: center
+      &_title
+        max-width: 40rem
+        font-size: 7.2rem
+        font-weight: 200
+        line-height: 1.2
+        color: $accent
+    &__right
+      margin-top: 18rem
+      &_contact
+        margin-bottom: 1.5rem
+        display: flex
+        align-items: center
+        gap: 2rem
+        color: $gray
+
+// - - - 
+
+.contact-form
+  margin-top: 4.5rem
+  display: flex
+  flex-direction: column
+  &__title
+    margin-bottom: 2.2rem
+    font-size: 1.8rem
+  &__input,
+  &__textarea
+    width: 100% !important
+    margin-bottom: 1.5rem
+    padding: 1.5rem 2rem
+    font-size: 1.4rem
+    background: #202427
+    border-radius: 1.2rem
+  &__textarea
+    height: 11rem
+    margin-bottom: 3.5rem
+  &__btn
+    color: $white
+    background: $accent
+    align-self: start
+    border: none
