--- a/app/styles/sass/blocks/_general.sass
+++ b/app/styles/sass/blocks/_general.sass
@@ -4,40 +4,64 @@ $black: #000000
 $white: #ffffff
 $headerbg: #1A1D20
 $mainbg: #1C1F22
+$inputbg: #202427
 
 // - - - 
 
 a
   color: $textcolor
   text-decoration: none
-  transition: .5s
+  transition: .3s
+
+path
+  transition: .3s
 
 img
   display: block
 
 input,
-button,
 textarea
-  padding: .5rem
   display: inline-block
-  background: none
-  border: none
-  font-size: inherit
-  font-family: inherit
+  padding: 1.4rem 2rem
   color: $white
+  background: $inputbg
+  border-radius: 1.2rem
+  font-size: 1.4rem
+  border: none
+  font-family: inherit
+  cursor: pointer
 
-path
-  transition: .5s
+button
+  display: inline-block
+  border: none
+  background: none
+  font-family: inherit
+  cursor: pointer
+
+// - - - 
+
+.heading
+  &-h1
+    font-size: 7.2rem
+    font-weight: 200
+    line-height: 1.2
+  &-h2
+    font-size: 3.6rem
+    font-weight: 600
+    line-height: 1.2
 
 // - - - 
 
 .btn
   display: inline-block
+  padding: 1.5rem 6rem
+  border-radius: 1.5rem
   border: .1rem solid #25292C
-  border-radius: 2.5rem
-  padding: 1.8rem 3.4rem
+  font-size: 1.6rem
+  transition: .3s
   &:hover
     background: #1C1F22
+    box-shadow: .2rem 1.2rem 2rem rgba($black, .2)
   &-icon
     padding: 1rem 1.5rem
     font-size: 1.4rem
@@ -45,9 +69,20 @@ path
     display: flex
     align-items: center
     gap: 2rem
-  &-small
-    padding: 1.5rem 6rem
-    border-radius: 1.5rem
+  &-square
+    padding: 0
+    width: 5rem
+    height: 5rem
+    border-radius: 2rem
+    display: flex
+    justify-content: center
+    align-items: center
+  &-large
+    padding: 1.8rem 3.4rem
+    border-radius: 2.5rem
+  &-accent
+    background: $accent
+    color: $white
 
 // - - - 
 
