--- a/app/styles/sass/blocks/sections.sass
+++ b/app/styles/sass/blocks/sections.sass
@@ -6,21 +6,12 @@
   display: flex
   flex-direction: column
   align-items: center
-  .user,
-  .menu
-    margin-top: auto
+
   .brand
     margin-bottom: 2.5rem
-  .cart,
+
   .user
-    width: 5rem
-    height: 5rem
-    border-radius: 2rem
-    border: .1rem solid #25292C
-    display: flex
-    align-items: center
-    justify-content: center
-  .user
+    margin-top: auto
     border: none
     box-shadow: .2rem 1.2rem 2rem rgba($black, .1)
     align-items: flex-end
@@ -29,7 +20,9 @@
       width: 100%
       height: 100%
       object-fit: cover
+
   .menu
+    margin-top: auto
     font-size: 1.5rem
     display: flex
     flex-direction: column
@@ -48,7 +41,7 @@
 
 .main
   max-width: calc( 100vw - 14rem )
-  padding: 4.5rem 7.5rem 5.5rem 9rem
+  padding: 3.5rem 7.5rem 5.5rem 9rem
   background: $mainbg
   border-radius: 3rem 0 0 3rem
   flex-grow: 1
@@ -57,6 +50,7 @@
 
   &-top
     display: flex
+    margin-bottom: 3rem
     &__left
       display: flex
       gap: 5rem
@@ -68,10 +62,6 @@
       gap: .5rem 5rem
       .menu__link:hover
         color: $accent
-    &__title
-      font-weight: 600
-      font-size: 3.6rem
-      line-height: 1
 
   &-content
     align-items: flex-end
@@ -84,12 +74,13 @@
 
 .search-form
   margin-left: auto
-  padding-bottom: 3rem
   display: flex
   align-items: center
+  gap: 2rem
   &__input
     max-width: 16rem
     font-size: 1.5rem
+    background: none
 
 // - - - 
 
@@ -160,9 +151,6 @@
   &__title
     max-width: 42rem
     margin: 2rem auto 0 auto
-    font-size: 7.2rem
-    font-weight: 200
-    line-height: 1.2
   &__desc
     max-width: 42rem
     margin: 2rem auto 0 auto
@@ -305,9 +293,9 @@
   &-content
     background: url('../images/dist/about-bg-2.png') center center no-repeat
     &__left
-      margin-top: 18rem
+      margin-top: 17rem
       &_title
-        margin-bottom: 2rem
+        margin-bottom: 2.5rem
         font-size: 2.4rem
         font-weight: 500
         line-height: 1.2
@@ -316,10 +304,10 @@
         font-size: 1.5rem
         color: $gray
       &_btn
-        margin-top: 2.5rem
+        margin-top: 1.5rem
     &__center
-      padding-bottom: 5rem
-      background: url('../images/dist/about-bg-1.png') center 40% no-repeat
+      padding-bottom: 6rem
+      background: url('../images/dist/about-bg-1.png') center 35% no-repeat
       display: flex
       align-items: flex-end
       justify-content: center
@@ -331,7 +319,7 @@
         line-height: 1.2
         color: $accent
     &__right
-      margin-top: 18rem
+      margin-top: 17rem
       &_contact
         margin-bottom: 1.5rem
         display: flex
@@ -342,7 +330,7 @@
 // - - - 
 
 .contact-form
-  margin-top: 4.5rem
+  margin-top: 4rem
   display: flex
   flex-direction: column
   &__title
@@ -351,11 +339,7 @@
   &__input,
   &__textarea
     width: 100% !important
-    margin-bottom: 1.5rem
-    padding: 1.5rem 2rem
-    font-size: 1.4rem
-    background: #202427
-    border-radius: 1.2rem
+    margin-bottom: 2rem
   &__textarea
     height: 11rem
     margin-bottom: 3.5rem
@@ -364,3 +348,175 @@
     background: $accent
     align-self: start
     border: none
+
+// - - - 
+
+.section
+  background: url('../images/dist/settings-bg-1.png') center center no-repeat
+  text-align: center
+  &-content
+    width: 90%
+    flex-direction: column
+  &-inner
+    &-s
+      width: 33rem
+      margin: 0 auto
+    &-m
+      width: 57rem
+      margin: 0 auto
+    &-l
+      width: 87rem
+      margin: 0 auto
+
+// - - - 
+
+.settings
+  &__title
+    margin-bottom: 8rem
+
+.user-form
+  display: flex
+  flex-wrap: wrap
+  gap: 2rem 3rem
+  &__name
+    font-size: 2rem
+    color: $accent
+    &_wrap
+      width: 100%
+      padding-bottom: 3rem
+      display: flex
+      flex-direction: column
+      align-items: center
+      justify-content: center
+      position: relative
+  &__img
+    width: 13rem
+    height: 13rem
+    margin: 0 auto
+    border-radius: 100%
+    overflow: hidden
+    &-wrap
+      margin-bottom: 3rem
+      position: relative
+    &_add
+      position: absolute
+      bottom: 1rem
+      right: 1rem
+  &__btn_wrap
+    width: 100%
+    margin-top: 4rem
+    text-align: center
+
+.form-label
+  display: flex
+  flex-direction: column
+  gap: .5rem
+  text-align: left
+  &_span
+    font-size: 1.2rem
+    text-transform: uppercase
+  &_input
+    width: 27rem !important
+
+// - - - 
+
+.sign
+  &__text
+    font-size: 1.5rem
+    color: $gray
+  &-form
+    margin-bottom: 2.5rem
+    display: flex
+    flex-direction: column
+    gap: 1.5rem
+    &__input
+      padding: 1.2rem
+      font-size: 1.4rem
+      background: $inputbg
+      border-radius: 1.5rem
+    &__btn
+      margin-top: 1rem
+
+// - - - 
+
+.cart-empty
+  .sign
+    &__img
+      margin: 11rem auto 8rem auto
+    &__title
+      margin-bottom: 1rem
+    &__text
+      margin-bottom: 3rem
+
+
+// - - - 
+
+.sign-in
+  .sign
+    &__img
+      margin: 3rem auto 6.5rem auto
+    &__title
+      margin-bottom: 4rem
+    &__text
+      margin-bottom: 1.5rem
+  .social-btns
+    margin-bottom: 2rem
+
+// - - - 
+
+.social-btns
+  display: flex
+  gap: 2rem
+  justify-content: center
+  &__item
+    width: 4.5rem
+    height: 4.5rem
+    display: flex
+    align-items: center
+    justify-content: center
+    border-radius: 1.5rem
+    border: .1rem solid #25292C
+    &:hover
+      color: $accent
+      background: #1C1F22
+      border: .1rem solid transparent
+      box-shadow: .2rem 1.2rem 2rem rgba($black, .2)
+
+// - - - 
+
+.wallet
+  &__title
+    margin-bottom: 7rem
+  &__img
+    margin: 0 auto 4.5rem auto
+
+// - - - 
+
+.paypal-form
+  margin-bottom: 2rem
+  text-align: center
+  &__title
+    margin-bottom: 1.5rem
+    font-size: 1.8rem
+
+// - - - 
+
+.addcard-form
+  display: flex
+  flex-wrap: wrap
+  gap: 2rem 3rem
+  &__title
+    width: 100%
+    font-size: 1.8rem
+    text-align: center
+  &__btn_wrap
+    width: 100%
+    margin-top: 4rem
+    text-align: center
+
+// - - - 
+
+
+
+// - - - 
+
