--- a/app/styles/sass/main.sass
+++ b/app/styles/sass/main.sass
@@ -1,2 +1,20 @@
 @import config
-@import 'blocks/**/*'
+// @import 'blocks/**/*'
+
+@import 'blocks/general'
+
+@import 'blocks/header'
+@import 'blocks/main'
+
+@import 'blocks/index'
+@import 'blocks/store'
+@import 'blocks/about'
+@import 'blocks/sign'
+@import 'blocks/settings'
+@import 'blocks/wallet'
+@import 'blocks/shopingcart'
+@import 'blocks/order'
+@import 'blocks/completeorder'
+@import 'blocks/detalis'
+
+@import 'blocks/sections'
