--- a/app/styles/sass/_config.sass
+++ b/app/styles/sass/_config.sass
@@ -15,6 +15,7 @@ $gutter: $grid-gutter-width
 
 @import 'node_modules/reset.css/reset'
 @import 'node_modules/swiper/swiper-bundle.min'
+@import 'node_modules/ion-rangeslider/css/ion.rangeSlider.min'
 @import 'app/vendor/slidinput/jquery.slidinput.min'
 
 // @import 'node_modules/bootstrap/scss/bootstrap-reboot.scss' // Bootstrap Reboot collection
