--- a/app/styles/sass/blocks/_shopingcart.sass
+++ b/app/styles/sass/blocks/_shopingcart.sass
@@ -20,11 +20,13 @@
       margin-bottom: 3rem
     &__price
       margin-bottom: 1rem
+      color: $accent
     &__settings
       width: 100%
       display: flex
       justify-content: space-between
       align-items: center
+      gap: 1rem
     &__size
       width: 2.6rem
       height: 2.6rem
