--- a/app/styles/sass/blocks/_general.sass
+++ b/app/styles/sass/blocks/_general.sass
@@ -56,12 +56,15 @@ button
 .btn
   display: inline-block
   padding: 1.4rem 5.5rem
+  color: $white
+  background: $headerbg
   border-radius: 2rem
   border: .1rem solid #25292C
   font-size: 1.6rem
   transition: .3s
   &:hover
     background: #1C1F22
+    border: .1rem solid #1C1F22
     box-shadow: .2rem 1.2rem 2rem rgba($black, .2)
   &-icon
     padding: 1rem 1.5rem
@@ -157,3 +160,90 @@ button
 
 .slidinput-placeholder
   color: $gray !important
+
+// - - - 
+
+.select
+  position: relative
+  &.is-active .select__body
+    display: block
+  &.unselected .select__current
+    color: $gray
+  &__header
+    padding: 0 1rem
+    display: flex
+    align-items: center
+    justify-content: space-between
+    border: .1rem solid $border
+    border-radius: 1.5rem
+    cursor: pointer
+    position: relative
+    z-index: 15
+  &__current
+    padding: 1.2rem
+    font-size: 1.4rem
+  &__icon
+    width: 4rem
+    height: 4rem
+    display: flex
+    align-items: center
+    justify-content: center
+    flex-shrink: 0
+  &__body
+    padding-top: 1rem
+    transform: translateY(-1rem)
+    border: .1rem solid $border
+    border-top: 0
+    border-radius: 0 0 1.5rem 1.5rem
+    background: $headerbg
+    position: absolute
+    left: 0
+    right: 0
+    top: 100%
+    z-index: 10
+    display: none
+  &__item
+    padding: 1.2rem
+    font-size: 1.4rem
+    color: $white
+    cursor: pointer
+    &:hover
+      background: $mainbg
+
+// - - - 
+
+.slidemenu
+  &-content
+    width: 500px
+    height: 100%
+    background: #cccccc
+    position: fixed
+    top: 0
+    z-index: 20
+    transform: translateX(-100%)
+    transition: .5s
+  &-space
+    width: 100%
+    height: 100%
+    position: fixed
+    top: 0
+    z-index: 15
+    background: rgba($black, .5)
+    overflow: hidden
+    opacity: 0
+    transition: .5s
+  &.is-active
+    .slidemenu-content
+      transform: translate(0)
+    .slidemenu-space
+      overflow: visible
+      opacity: 1
+      transform: translate(0)
+  &-l
+    .slidemenu-content, .slidemenu-space
+      left: 0
+      transform: translateX(-100%)
+  &-r
+    .slidemenu-content, .slidemenu-space
+      right: 0
+      transform: translateX(100%)
