--- a/app/styles/sass/blocks/_header.sass
+++ b/app/styles/sass/blocks/_header.sass
@@ -1,9 +1,12 @@
 .header
   width: 14rem
   padding: 3.5rem 0 6rem 0
+  background: $headerbg
   display: flex
   flex-direction: column
   align-items: center
+  position: relative
+  z-index: 25
 
   .brand
     margin-bottom: 2.5rem
@@ -21,6 +24,7 @@
 
   .menu
     margin-top: auto
+    padding-bottom: 5rem
     font-size: 1.5rem
     display: flex
     flex-direction: column
@@ -31,6 +35,23 @@
         color: $white
     &__item
       &:not(:last-of-type)
-        margin-bottom: 2rem
+        margin-bottom: 1.5rem
       &:last-child
-        margin-top: 3.5rem
+        margin-top: 2rem
+
+// - - - 
+
+.dropmenu-cart
+  &.is-active
+    .dropmenu-cart-content, .dropmenu-cart-space
+      transform: translateX(14rem)
+  .dropmenu-cart__product
+    width: auto
+    padding: 2rem 0 3rem 0
+    gap: 4rem
+    align-items: flex-start
+    flex-direction: row
+    &:not(:last-of-type)
+      border-bottom: .1rem solid $border
+    &_img
+      margin-bottom: 0
